<resources>
    <string name="app_name">VELO</string>
    <string name="sotw_north">N</string>
    <string name="sotw_east">E</string>
    <string name="sotw_south">S</string>
    <string name="sotw_west">W</string>
    <string name="sotw_northeast">NE</string>
    <string name="sotw_northwest">NW</string>
    <string name="sotw_southeast">SE</string>
    <string name="sotw_southwest">SW</string>
    <string name="use_metrics">Use metric units</string>
    <string name="wait_gps">Waiting GPS</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="time">Time</string>
    <string name="distance">Trav. dist.</string>
    <string name="avg_speed">Avg. spd.</string>
    <string name="allow_location">App can\'t function without location services!</string>
    <string name="save">Save</string>
    <string name="journey_name">Journey name</string>
    <string name="name_not_found">The journey needs a name to be saved!</string>
    <string name="journeys">My journeys</string>
    <string name="name_found">There is already a journey with that name!</string>
    <string name="delete">Delete journey</string>
    <string name="edit">Edit journey</string>
    <string name="about">About</string>
    <string name="journeys_empty">You don\'t have saved journeys</string>
    <string name="max_speed">Max. spd.</string>
    <string name="reset">Reset</string>
    <string name="about_text">Conclusion of the Programming Course for Mobile Devices</string>
    <string name="accel_decel">Accel. / Decel.</string>
    <string name="to">To</string>
    <string name="speed">Spd.</string>
    <string name="start_speed">Start spd.</string>
    <string name="target_speed">Target spd.</string>
    <string name="current_speed">Current. spd.</string>
    <string name="lost_gps">Lost gps connection</string>
    <string name="acceleration">Acceleration</string>
    <string name="deceleration">Deceleration</string>
    <string name="back">Back</string>
    <string name="start_journey">Start journey</string>
    <string name="no_target_speed">The accel/decel needs a target speed!</string>
    <string name="removing_journeys">Removing journey(s)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_deletion">Do you realy want to remove the selected journey(s)?</string>
    <string name="ana_and_sys_devel">Analysis and Systems Development</string>
    <string name="gps_disabled">GPS disabled</string>
    <string name="confirm_gps">Do you want to enable the GPS?</string>
    <string name="startsp_eq_targetsp">The start speed can\'t be the same as target speed!</string>
</resources>
